# rusting_rays

./: .eslintignore  .eslintrc.js  .gitignore  .jottaignore  .prettierignore  Cargo.toml  README.md  eslint.config.js  index.html  index.ts  package-lock.json  package.json  style.css  tsconfig.json  webpack.config.cjs  webpack.config.js
.github/: dependabot.yml
.github/workflows/: deploy.yaml  test.yaml
examples/: Cargo.toml  index.js  main.rs  package-lock.json  package.json  webpack.config.js
examples/src/: lib.rs
src/: color.rs  lib.rs  main.rs  math.rs  rendering.rs  scene.rs  test.rs  test_scene.rs
