[package]
name = "ray_tracing"
version = "0.1.0"
authors = ["Fredrik Meyer <hrmeyer@gmail.com>"]
edition = "2018"
exclude = ["examples/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name="foo"
path="src/main.rs"

[dependencies]
image = "0.23.12"
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
console_error_panic_hook = "0.1.6"
serde-wasm-bindgen = "0.1.3"
web-sys = { version = "0.3.46", features = ['console'] }
console_log = { version = "0.2", features = ['color'] }
js-sys = "0.3"
serde_json = "1.0"
log = "0.4"