[package]
name = "ray_tracing"
version = "0.1.0"
authors = ["Fredrik Meyer <hrmeyer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name="foo"
path="src/main.rs"

[dependencies]
image = "0.24.8"
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
console_error_panic_hook = "0.1.7"
serde-wasm-bindgen = "0.6.5"
web-sys = { version = "0.3.68", features = ['console'] }
console_log = { version = "1.0", features = ['color'] }
js-sys = "0.3"
serde_json = "1.0"
log = "0.4"