[package]
name = "examples"
version = "0.1.0"
authors = ["Fredrik Meyer <hrmeyer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name="foo"
path="src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ray_tracing = { version="0.1.0", path=".."}
image = "0.23.12"
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.1.3"
web-sys = { version = "0.3.46", features = ['console'] }
js-sys = "0.3"